--- a/src/SOLID/SOLID.csproj
+++ b/src/SOLID/SOLID.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="03 - LSP\" />
+    <Folder Include="04 - ISP\" />
+    <Folder Include="05 - DIP\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
 </Project>
