feat: Implementação do Factory Method

--- a/src/DesignPattern/DesignPattern.csproj
+++ b/src/DesignPattern/DesignPattern.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="01 - Creational\1.2 - FactoryMethod\" />
+    <Folder Include="02 - Structural\" />
+    <Folder Include="03 - Behavioral\" />
+  </ItemGroup>
+
 </Project>
